--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -10,11 +10,11 @@
                 </svg>     
         </button>
     </div>
-    <div class="header__logo">
+    <a href="#" class="header__logo">
         <svg width="162" height="16">
             <use href="../resources/svgSprites/svgSprite.svg#header-logo"></use>
         </svg>
-    </div>
+    </a>
     <nav class="header__menu">
         <ul role="list">
             <li @mouseover="headerMegaMenu = true"><a href="#"><span>Новинки</span></a></li>
@@ -149,8 +149,10 @@
                 </ul>
             </nav>
         </div>
+        <a href="#">
         <img class="header-mega-menu__discount-img" loading="lazy" decoding="async" src="resources/images/header-mega-menu-img.jpg" alt="image" width="630" height="180">
         </div>
+        </a>
         <div class="header-mega-menu__bottom">
         <ul role="list">
             <li><a href="#">Вся одежда для женщин</a></li>
