--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -1,3 +1,85 @@
 <footer class="footer">
-    <h2>Это футер</h2>
+    <div class="container footer__container">
+     <nav class="footer__menu footer__menu--mobile">
+        <div class="footer__menu-row">
+            <ul role="list">
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Оплата</a></li>
+                <li><a href="#">Гарантии и возврат</a></li>
+                <li><a href="#">Размеры</a></li>
+                <li><a href="#">Уход за одеждой</a></li>
+            </ul>
+        </div>
+     </nav>
+     <nav class="footer__menu footer__menu--desktop">
+        <div>
+            <h2>ПРОШЛЫЕ КОЛЛЕКЦИИ</h2>
+            <span class="footer__menu-line"></span>
+            <ul role="list">
+                <li><a href="#">Наименование коллекции</a></li>
+                <li><a href="#">Наименование коллекции</a></li>
+                <li><a href="#">Наименование коллекции</a></li>
+                <li><a href="#">Наименование коллекции</a></li>
+                <li><a href="#">Наименование коллекции</a></li>
+            </ul>
+        </div>
+        <div>
+            <h2>ПОКУПАТЕЛЮ</h2>
+            <span class="footer__menu-line"></span>
+            <ul role="list">
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Оплата</a></li>
+                <li><a href="#">Гарантии и возврат</a></li>
+                <li><a href="#">Размеры</a></li>
+                <li><a href="#">Уход за одеждой</a></li>
+            </ul>
+        </div>
+        <div>
+            <h2>О КОМПАНИИ</h2>
+            <span class="footer__menu-line"></span>
+            <ul role="list">
+                <li><a href="#">Публичная оферта</a></li>
+                <li><a href="#">Пользовательское соглашение</a></li>
+            </ul>
+        </div>
+        <div>
+            <h2>КОНТАКТЫ</h2>
+            <span class="footer__menu-line"></span>
+            <ul role="list">
+                <li>Раб.телефон - <a href="tel:+7 8007774999">8 800 777-4-999</a></li>
+                <li>Обслуживание клиентов<br> 7:00 - 22:00 МСК Пн-Пт</a></li>
+                <li>E-mail - <a href="mailto:support@realaction.com">support@realaction.com</a></li>
+            </ul>
+        </div>
+     </nav>
+     <ul class="footer__social" role="list">
+        <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none">
+            <path fill="#fff" d="M20 0a20 20 0 1 0 0 40 20 20 0 0 0 0-40Zm10.65 26.79h-2.53a1.83 1.83 0 0 1-1.44-.69c-.76-.95-2.26-2.65-3.83-3.38a.6.6 0 0 0-.85.55v2.5a1.01 1.01 0 0 1-1.02 1.02h-1.17c-1.53 0-4.81-.93-7.43-4.74a25.89 25.89 0 0 1-3.8-7.82.8.8 0 0 1 .77-1.02h2.57a1.19 1.19 0 0 1 1.14.85c.47 1.6 1.71 5.04 3.9 6.76a.45.45 0 0 0 .73-.36v-4.02c0-.8-.35-1.59-.88-2.21a.61.61 0 0 1 .46-1.02h3.96a.77.77 0 0 1 .77.77v5.42a.43.43 0 0 0 .67.34 8.09 8.09 0 0 0 1.92-2.14c.72-1.08 1.6-2.86 2.04-3.79a1.05 1.05 0 0 1 .95-.6h2.8a.69.69 0 0 1 .62 1 31.49 31.49 0 0 1-3.38 5.54 1.08 1.08 0 0 0 .13 1.52c.84.72 2.16 2.06 3.58 4.28a.8.8 0 0 1-.68 1.24Z"/>
+          </svg></a></li>
+          <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none">
+            <path fill="#fff" fill-rule="evenodd" d="M0 20a20 20 0 1 1 40 0 20 20 0 0 1-40 0ZM20 9.33c-2.9 0-3.26.02-4.4.07a7.83 7.83 0 0 0-2.59.5 5.48 5.48 0 0 0-3.12 3.12 7.8 7.8 0 0 0-.5 2.58c-.04 1.14-.06 1.5-.06 4.4 0 2.9.02 3.26.07 4.4a7.7 7.7 0 0 0 .5 2.59 5.48 5.48 0 0 0 3.12 3.12c.67.26 1.45.44 2.58.5 1.14.04 1.5.06 4.4.06 2.9 0 3.26-.02 4.4-.07a7.84 7.84 0 0 0 2.59-.5 5.48 5.48 0 0 0 3.12-3.12 7.9 7.9 0 0 0 .5-2.58c.04-1.14.06-1.5.06-4.4 0-2.9-.02-3.26-.07-4.4a7.9 7.9 0 0 0-.5-2.59 5.48 5.48 0 0 0-3.12-3.12 7.85 7.85 0 0 0-2.58-.5c-1.14-.04-1.5-.06-4.4-.06Z" clip-rule="evenodd"/>
+            <path fill="#fff" fill-rule="evenodd" d="M19.04 11.25H20c2.85 0 3.19.01 4.31.07a5.9 5.9 0 0 1 1.98.36 3.49 3.49 0 0 1 2.03 2.03c.14.37.32.94.36 1.98.05 1.12.07 1.46.07 4.3 0 2.85-.02 3.2-.07 4.32a5.9 5.9 0 0 1-.36 1.98 3.49 3.49 0 0 1-2.03 2.02 5.8 5.8 0 0 1-1.98.37c-1.12.05-1.46.06-4.3.06-2.86 0-3.2-.01-4.32-.06a5.92 5.92 0 0 1-1.98-.37 3.3 3.3 0 0 1-1.23-.8 3.3 3.3 0 0 1-.8-1.23 5.9 5.9 0 0 1-.36-1.98 74.46 74.46 0 0 1-.06-4.3c0-2.85 0-3.19.06-4.31a5.9 5.9 0 0 1 .37-1.99c.19-.5.42-.85.8-1.22.37-.38.72-.6 1.22-.8.38-.15.94-.32 1.98-.37a59.1 59.1 0 0 1 3.35-.06Zm6.66 1.78a1.28 1.28 0 1 0 0 2.56 1.28 1.28 0 0 0 0-2.56Zm-5.7 1.5a5.48 5.48 0 1 0 0 10.95 5.48 5.48 0 0 0 0-10.96Z" clip-rule="evenodd"/>
+            <path fill="#fff" fill-rule="evenodd" d="M20 16.45a3.56 3.56 0 1 1 0 7.1 3.56 3.56 0 0 1 0-7.1Z" clip-rule="evenodd"/>
+          </svg></a></li>
+          <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none">
+            <path fill="#fff" d="M20 0a20 20 0 1 0 0 40 20 20 0 0 0 0-40Zm11.2 24.5a2.78 2.78 0 0 1-2.78 2.79s-2.38.35-8.56.35c-6.2 0-8.39-.35-8.39-.35a2.78 2.78 0 0 1-2.78-2.78v-9.19a2.78 2.78 0 0 1 2.78-2.78s2.18-.35 8.39-.35c6.18 0 8.56.35 8.56.35a2.78 2.78 0 0 1 2.78 2.78v9.19Z"/>
+            <path fill="#fff" d="m16.53 24.32 7.6-4.38-7.6-4.39v8.77Z"/>
+          </svg></a></li>
+          <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none">
+            <path fill="#fff" d="M20 0a20 20 0 1 0 0 40 20 20 0 0 0 0-40Zm9.82 13.7-3.28 15.47c-.24 1.1-.9 1.36-1.8.85l-5-3.69-2.42 2.32c-.26.27-.49.5-1 .5l.35-5.1 9.27-8.36c.4-.36-.1-.56-.63-.2l-11.45 7.2-4.93-1.54c-1.08-.34-1.1-1.07.22-1.59l19.28-7.43c.9-.32 1.68.22 1.4 1.57Z"/>
+          </svg></a></li>
+          <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none">
+            <path fill="#fff" d="M40 20a20 20 0 1 0-40 0 20 20 0 0 0 40 0Zm-25.37 0v-3.83h2.34v-2.31c0-3.12.94-5.37 4.36-5.37h4.06v3.82h-2.86c-1.44 0-1.76.95-1.76 1.95v1.91h4.41l-.6 3.83h-3.81v11.54h-3.8V20h-2.34Z"/>
+          </svg></a></li>
+     </ul>
+     <div class="footer__bottom">
+     <p class="footer__copyright">© ООО «REAL ACTION» 2020—2022. Все права защищены.</p>
+     <address>Юридический адрес: г. Екатеринбург, ул. пр.Космонавтов, д. 19</address>
+     <p class="footer__conditions-price">Указанная стоимость товаров и условия их приобретения действительны по состоянию на текущую дату.</p>
+     <ul role="list" class="footer__policy">
+        <li><a href="#">Публичная оферта</a></li>
+        <li><a href="#">Пользовательское соглашение</a></li>
+     </ul>
+     </div>
+    </div>
 </footer>
