--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -17,6 +17,9 @@
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="manifest" href="/my.webmanifest">
 <meta name="theme-color" content="#fff" />
-
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+/>
 <link rel="stylesheet" href="styles/main.css" />
 </head>
