--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -84,6 +84,17 @@
 		<span class="cta-slider__pagination-current" data-index="0"></span>
 		</div>
   </div>
+<div class="video" id="video">
+<div class="video__overlay"></div>
+<div class="video__info">
+	<h2>ВСЕМИРНЫЙ ДЕНЬ ВОДНЫХ РЕСУРСОВ</h2>
+			<h3>Более экологичные модели Less Water</h3>
+			<a href="#" class="variant-1-btn video__btn">посмотреть сейчас</a>
+</div>
+<iframe width="375" height="500"
+src="https://www.youtube.com/embed/cDxv-y1XuaA?autoplay=1&controls=0&disablekb=1&enablejsapi=1&end=50&loop=1&modestbranding=1&start=2"
+frameborder="0" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+</div>
 		</main>
 		@@include('../parts/footer.html')
 	</body>
