--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -108,7 +108,7 @@
      </ul>
     </div>
     </form>
-    <nav class="header-mega-menu" x-show="headerMegaMenu === true" @mouseover="headerMegaMenu = true">
+    <nav class="header-mega-menu" x-show="headerMegaMenu === true" @mouseover="headerMegaMenu = true" x-cloak>
         <div class="header-mega-menu__top">
             <div class="header-mega-menu__top-lists">
             <nav>
