ready index page

--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -1,4 +1,19 @@
 <footer class="footer">
+    <form action="#" class="footer__mail">
+        <fieldset>
+            <legend>REAL ACTION Новостная рассылка</legend>
+            <p>Получайте последние новости интернет-магазина REAL ACTION о новых продуктах, эксклюзивных предложениях, образе жизни и модных тенденциях.</p>
+            <div class="footer__mail-input-group">
+                <input type="email" name="footerMail" id="footerMail" placeholder="E-mail" required>
+                <button type="submit" class="footer__mail-btn">
+<svg xmlns="http://www.w3.org/2000/svg" width="15" height="11" fill="none">
+  <path fill="#fff" d="M9.23 11a.6.6 0 0 1-.41-.16.55.55 0 0 1-.17-.39.53.53 0 0 1 .17-.39L13.6 5.5 8.8.94a.54.54 0 0 1-.16-.39c0-.14.06-.28.17-.39a.6.6 0 0 1 .4-.16c.16 0 .3.06.42.16l5.19 4.95a.55.55 0 0 1 .17.4.53.53 0 0 1-.17.38l-5.2 4.95a.58.58 0 0 1-.4.16Z"/>
+  <path fill="#fff" d="M14.42 6.05H.58a.6.6 0 0 1-.41-.16A.54.54 0 0 1 0 5.5c0-.14.06-.28.17-.39a.6.6 0 0 1 .4-.16h13.85c.15 0 .3.06.4.16.12.1.18.25.18.4 0 .14-.06.28-.17.38a.6.6 0 0 1-.41.16Z"/>
+</svg>
+                </button>
+            </div>
+        </fieldset>
+    </form>
     <div class="container footer__container">
      <nav class="footer__menu footer__menu--mobile">
         <div class="footer__menu-row">
