--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -496,6 +496,42 @@
 	</ul>
 </div>
 </section>
+<section class="together-with">
+	<div class="container together-with__container">
+      <ul role="list">
+		<li class="together-with__item together-with__item--big">
+			<h2 class="section-title">#вместе с real action</h2>
+			<figure class="together-with__card together-with__card--big">
+				<img loading="lazy" decoding="async" src="resources/images/together-with-card-img-1.jpg" alt="image" width="335" height="340">
+				<figcaption>
+					<p>Подпишитесь на нас в социальных сетях и упоминайте <span>@real_action</span> в подписи, чтобы продемонстрировать свой фирменный стиль</p>
+					<a href="#" class="variant-1-btn
+					together-with__card-link together-with__card-link--big">перейти в instagram</a>
+				</figcaption>
+			</figure>
+		</li>
+		<template x-for="i in 4">
+			<li class="together-with__item together-with__item--small" data-count="i">
+				<figure class="together-with__card together-with__card--small">
+					<img loading="lazy" decoding="async" src="resources/images/together-with-card-img-2.jpg" alt="image" width="335" height="340">
+					<figcaption>
+						<h2>какой-то чел</h2>
+						<a href="#" class="variant-1-btn together-with__card-link together-with__card-link--small">посмотреть</a>
+						<div class="together-with__card-tags">
+							<p><span>@</span>kakoytochel</p>
+							<a href="#">
+								<svg width="15" height="15" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M8.04442 0.254619C8.32842 0.254203 8.64534 0.254619 9.00134 0.254619C11.8493 0.254619 12.1869 0.26487 13.3116 0.315953C14.3516 0.363537 14.9161 0.537287 15.2921 0.683287C15.7898 0.87662 16.1448 1.1077 16.5178 1.48104C16.8912 1.85437 17.1223 2.20995 17.3161 2.70779C17.4621 3.08329 17.6361 3.64779 17.6834 4.68779C17.7345 5.8122 17.7457 6.15004 17.7457 8.9967C17.7457 11.8434 17.7345 12.1812 17.6834 13.3056C17.6358 14.3456 17.4621 14.9101 17.3161 15.2856C17.1228 15.7835 16.8912 16.1379 16.5178 16.511C16.1445 16.8844 15.7901 17.1155 15.2921 17.3088C14.9165 17.4555 14.3516 17.6288 13.3116 17.6764C12.1872 17.7275 11.8493 17.7385 9.00134 17.7385C6.15309 17.7385 5.8155 17.7275 4.69109 17.6764C3.65109 17.6284 3.08659 17.4545 2.71042 17.3085C2.21259 17.1152 1.857 16.8841 1.48367 16.5108C1.11034 16.1375 0.879252 15.7828 0.685502 15.2848C0.539502 14.9092 0.365502 14.3448 0.318169 13.3048C0.267002 12.1803 0.256836 11.8425 0.256836 8.99404C0.256836 6.14554 0.267002 5.80954 0.318169 4.68512C0.365669 3.64512 0.539502 3.08062 0.685502 2.70462C0.878835 2.20687 1.11034 1.85129 1.48367 1.47795C1.857 1.10462 2.21259 0.873536 2.71042 0.679703C3.08642 0.533036 3.65109 0.359703 4.69109 0.311953C5.67509 0.267536 6.05642 0.254203 8.04442 0.251953V0.254619ZM14.6952 2.0257C13.9885 2.0257 13.4152 2.59845 13.4152 3.30529C13.4152 4.01195 13.9885 4.58529 14.6952 4.58529C15.4018 4.58529 15.9752 4.01195 15.9752 3.30529C15.9752 2.59862 15.4018 2.0257 14.6952 2.0257ZM9.00134 3.52129C5.97617 3.52129 3.5235 5.97404 3.5235 8.99912C3.5235 12.0243 5.97617 14.4759 9.00134 14.4759C12.0265 14.4759 14.4783 12.0243 14.4783 8.99912C14.4783 5.97404 12.0265 3.52129 9.00134 3.52129Z" fill="white"/>
+									</svg>	
+							</a>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+		</template>
+	  </ul>
+	</div>
+</section>
 		</main>
 		@@include('../parts/footer.html')
 	</body>
