ready index page

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -496,6 +496,44 @@
 	</ul>
 </div>
 </section>
+<section class="together-with">
+	<div class="container together-with__container">
+      <ul role="list">
+		<li class="together-with__item together-with__item--big">
+			<h2 class="section-title">#вместе с real action</h2>
+			<figure class="together-with__card together-with__card--big">
+				<img loading="lazy" decoding="async" src="resources/images/together-with-card-img-1.jpg" alt="image" width="335" height="340">
+				<figcaption>
+					<p>Подпишитесь на нас в социальных сетях и упоминайте <span>@real_action</span> в подписи, чтобы продемонстрировать свой фирменный стиль</p>
+					<a href="#" class="variant-1-btn
+					together-with__card-link together-with__card-link--big">перейти в instagram</a>
+				</figcaption>
+			</figure>
+		</li>
+		<template x-for="i in 4">
+			<li class="together-with__item together-with__item--small" data-count="i">
+				<figure class="together-with__card together-with__card--small">
+					<img loading="lazy" decoding="async" src="resources/images/together-with-card-img-2.jpg" alt="image" width="335" height="340">
+					<figcaption>
+						<h2>какой-то чел</h2>
+						<a href="#" class="variant-1-btn together-with__card-link together-with__card-link--small">посмотреть</a>
+						<div class="together-with__card-tags">
+							<p><span>@</span>kakoytochel</p>
+							<a href="#">
+								<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M7.49982 3.82812C5.48126 3.82812 3.82812 5.48126 3.82812 7.49982C3.82812 9.51838 5.48126 11.1715 7.49982 11.1715C9.51838 11.1715 11.1541 9.51838 11.1541 7.49982C11.1541 5.48126 9.50098 3.82812 7.49982 3.82812ZM7.49982 10.3014C5.95109 10.3014 4.69819 9.04854 4.69819 7.49982C4.69819 5.95109 5.95109 4.69819 7.49982 4.69819C9.03114 4.69819 10.284 5.95109 10.284 7.49982C10.284 9.04854 9.03114 10.3014 7.49982 10.3014Z" fill="white"/>
+									<path d="M11.5894 1.75732C11.2065 1.75732 10.8585 1.89654 10.5975 2.15756C10.3365 2.41858 10.1973 2.76661 10.1973 3.14944C10.1973 3.53227 10.3365 3.88029 10.5975 4.14131C10.8585 4.40234 11.2065 4.54155 11.5894 4.54155C11.9722 4.54155 12.3202 4.40234 12.5813 4.14131C12.8249 3.8977 12.9815 3.54967 12.9989 3.16684V3.14944C12.9989 2.78401 12.8423 2.43598 12.5987 2.19236C12.3376 1.91394 11.9722 1.75732 11.5894 1.75732ZM11.9548 3.51486C11.7634 3.70628 11.398 3.70628 11.2065 3.51486C11.1021 3.41046 11.0499 3.28865 11.0499 3.14944C11.0499 3.01022 11.1021 2.87101 11.2065 2.78401C11.311 2.6796 11.4328 2.62739 11.572 2.62739C11.7112 2.62739 11.8504 2.6796 11.9548 2.78401C12.0418 2.87101 12.1114 3.01022 12.1114 3.13203C12.1114 3.28865 12.0592 3.42786 11.9548 3.51486Z" fill="white"/>
+									<path d="M10.5452 0H4.43735C1.98376 0 0 1.98376 0 4.43736V10.5626C0 13.0162 1.98376 15 4.43735 15H10.5626C13.0162 15 15 13.0162 15 10.5626V4.43736C14.9826 1.98376 12.9988 0 10.5452 0ZM14.1125 10.5626C14.1125 12.529 12.5116 14.1299 10.5452 14.1299H4.43735C2.471 14.1299 0.87007 12.529 0.87007 10.5626V4.43736C0.87007 2.471 2.471 0.87007 4.43735 0.87007H10.5626C12.529 0.87007 14.1299 2.471 14.1299 4.43736V10.5626H14.1125Z" fill="white"/>
+									</svg>		
+							</a>
+						</div>
+					</figcaption>
+				</figure>
+			</li>
+		</template>
+	  </ul>
+	</div>
+</section>
 		</main>
 		@@include('../parts/footer.html')
 	</body>
